# tao

./: .gitignore  LICENSE
crawl/: MANIFEST.in  Makefile  README.md  mkdocs.yml  setup.cfg
crawl/src/crawl/: __init__.py  __main__.py
crawl/src/crawl/assessor/: __init__.py  assessor.py
crawl/src/crawl/command/: main.py
crawl/src/crawl/data/: streets_fairfax_va.csv  streets_loudoun_va.csv
db/: INSTALL.md  README.md  drop.sql  example.txt
db/etc/: test.cfg
db/scripts/: createdb.sh  rmdb.sh  startdb.sh  stopdb.sh
db/src/: create_functions.sql  create_tables.sql  install.sql
db/src/functions/: assoc_count.sql  assoc_del.sql  assoc_get.sql  assoc_time_range.sql  obj_add.sql  obj_del.sql  obj_get.sql  obj_update.sql
db/test/: test_assoc.sh  test_assoc_add.sh  test_assoc_del.sh
db/util/: test.sh
search/doc/sop/: TODO_llm_webservice.md  few_shot.md  fine_tuning_llm_for_dense_retrieval.md  ner.md  rep_lang_embeddings.md  search_dense_retrieval.md  search_generative.md  search_reranking.md  zero_shot.md
