[metadata]
name = crawl
version = attr: crawl.__version__
license = MIT
license_files = LICENSE
classifiers = License :: OSI Approved :: MIT License
url = https://github.com/memoryaligned/crawl
author = Randall Adams
author_email = "First Last <first.last@gmail.com>"
description = Crawl support for public websites
long_description = file: README.md
long_description_content_type = text/markdown

[options]
# install_requires =
#   setup
package_dir =
  =src
packages = find:

[options.extras_require]
dev =
  pudb
  black
  flake8
  pytest
  pytest-cov
  wily
  twine
  mkdocs
  pre-commit
  build
  pdoc3

[options.packages.find]
where = src

[tox:tox]
isolated_build = True
envlist =
  3.9.16
  3.10.10
  3.11.2
  3.12-dev
deps = pytest
commands = pytest

[tool:pytest]
testpaths = test

[testenv]
deps =
  pytest
  pytest-cov
commands = pytest test/

[options.entry_points]
console_scripts =
  crawl = crawl.command.main:main
